# BinjaReturnHighlighter

./: .clang-tidy  .cppcheck-suppression.txt  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPING.md  LICENSE  README.md  asan.supp  prek.toml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
cmake/: dev-mode.cmake  lint-targets.cmake  lint.cmake  tidy.cmake  variables.cmake
include/BinjaReturnHighlighter/: ColorDefs.hpp  ColorPickerAction.hpp  ExitPointDetection.hpp  ReturnHighlightRenderLayer.hpp
scripts/: update_binja_api.py
source/: ColorPickerAction.cpp  ExitPointDetection.cpp  ReturnHighlightRenderLayer.cpp  plugin.cpp  ui_plugin.cpp
test/: CMakeLists.txt  ReturnHighlightRenderLayer_test.cpp  TestHelpers.cpp  TestHelpers.hpp
test/data/: simple  simple.c
vcpkg-overlays/triplets/: universal-macos-release.cmake
